added filters
